fix font weight on ios

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,8 @@
 @font-face {
 	font-family: 'Gilroy';
 	src: url('/fonts/Gilroy/Gilroy-SemiBold.otf');
-	/* font-style: normal; */
-	/* font-weight: 500; */
+	font-style: normal;
+	font-weight: 500;
 	font-display: swap;
 }
 
@@ -38,7 +38,7 @@
 * {
 	box-sizing: border-box;
 	font-family: 'Gilroy', -apple-system, Segoe UI, sans-serif;
-	/* font-weight: 500; */
+	font-weight: 500;
 	color: var(--color-text-primary);
 	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: transparent;
